--- a/latex-support/doc/latex-hotkeys.tex
+++ b/latex-support/doc/latex-hotkeys.tex
@@ -222,6 +222,18 @@ Key mappings for Vim and gVim\\
 %%~~~~~ TABULAR : begin ~~~~~~~~~~
 \begin{tabular}[]{|p{11mm}|p{60mm}|}
 %%----------------------------------------------------------------------
+%%  Beamer
+%%----------------------------------------------------------------------
+\hline
+\multicolumn{2}{|r|}{\textsl{B\textbf{e}amer}}\\[1.0ex]
+\hline \Map{bf}  & frame           \hfill (n, i, v)\\
+\hline \Map{bc}  & columns         \hfill (n, i, v, T)\\
+\hline \Map{bi}  & itemize         \hfill (n, i, v)\\
+\hline \Map{bo}  & overprint       \hfill (n, i, b)\\
+\hline \Map{bg}  & includegraphics \hfill (n, i)\\
+\hline \Map{bbl} & block           \hfill (n, i, v)\\
+\hline
+%%----------------------------------------------------------------------
 %%  Wizard
 %%----------------------------------------------------------------------
 \hline
@@ -303,6 +315,9 @@ Key mappings for Vim and gVim\\
 \end{tabular}\\
 %%~~~~~ TABULAR :  end  ~~~~~~~~~~
 %
+%%======================================================================
+%%  page 2 / table, right part      [[[1
+%%======================================================================
 \end{center}%
 \end{multicols}%
 %
