Improve the plug-in and templates
- Change map for running the typesetter to 'F9' and for viewing the document
  to 'CTRL+F9' (customizable in filetype plug-in).
- Change template personalization hint to be less verbose.
- Create maps for some template in BibTeX buffers.
- Fix various problems.
- Improve some templates.
- Update the template engine.

taken from WolfgangMehner/vim-plugins, revision
https://github.com/WolfgangMehner/vim-plugins/commit/3d8f91d98971ecc0d55b873a463b5cd91d24f985

--- a/latex-support/doc/latex-hotkeys.tex
+++ b/latex-support/doc/latex-hotkeys.tex
@@ -6,12 +6,12 @@
 %%
 %%        Version:  see \Pluginversion
 %%        Created:  02.01.2013
-%%       Revision:  20.09.2016
+%%       Revision:  27.01.2017
 %%
 %%         Author:  Wolfgang Mehner (WM), wolfgang-mehner@web.de
 %%                  Dr. Fritz Mehner (fgm), mehner.fritz@web.de
 %%      Copyright:  Copyright (c) 2013-2015, Dr. Fritz Mehner
-%%                  Copyright (c) 2016-2016, Wolfgang Mehner
+%%                  Copyright (c) 2016-2017, Wolfgang Mehner
 %%
 %%=====================================================================================
 
@@ -30,7 +30,7 @@
 
 \setlength\parindent{0pt}
 
-\newcommand{\Pluginversion}{1.3pre}
+\newcommand{\Pluginversion}{1.3alpha}
 \newcommand{\ReleaseDate}{\today}
 \newcommand{\Rep}{{\scriptsize{[n]}}}
 \newcommand{\Map}[1] {\textbf{\textasciiacute}\texttt{#1}}
@@ -206,15 +206,13 @@ Key mappings for Vim and gVim\\
 \hline  \Map{mea} & eqnarray+label            \hfill (n, i, v)\\
 \hline  \Map{mm}  & matrix                    \hfill (n, i)\\
 \hline
+\hline  \Map{mca} & cases                     \hfill (n, i, v)\\
 \hline  \Map{mch} & choose                    \hfill (n, i, v)\\
-\hline  \Map{mddt}& ddot                      \hfill (n, i, v)\\
-\hline  \Map{mdt} & dot                       \hfill (n, i, v)\\
 \hline  \Map{mfr} & frac                      \hfill (n, i, v)\\
 \hline  \Map{mnr} & nth root                  \hfill (n, i, v)\\
 \hline  \Map{mpr} & prod                      \hfill (n, i, v)\\
 \hline  \Map{msq} & sqrt                      \hfill (n, i, v)\\
 \hline  \Map{msu} & sum                       \hfill (n, i, v)\\
-\hline  \Map{mve} & vec                       \hfill (n, i, v)\\
 \hline  \Map{mon} & operatorname              \hfill (n, i, v)\\
 \hline
 %
