Improve Neovim behavior and conversions
- Adapt for running under Neovim more smoothly.
- Add command :LatexConvert to run conversion.
- Add conversion 'eps-pdf'.
- Add command :LatexMainDoc to set the document for typesetting.
- Remove 'g:Latex_CreateMenusDelayed', use 'g:Latex_LoadMenus' instead.
- The templates which are inserted into new files as file skeletons can be
  specified in the templates library, via the property:
    Latex::FileSkeleton::Script
- Internal changes.
- Move the filetype plug-ins for tex and make to 'latex-support/rc'.
- Rework the documentation.
- Update the template engine.
- Update the toolbox.

taken from WolfgangMehner/vim-plugins, revision
https://github.com/WolfgangMehner/vim-plugins/commit/1b49b8ab36c10544435b627ff335f8b6964f8b47

--- a/latex-support/doc/latex-hotkeys.tex
+++ b/latex-support/doc/latex-hotkeys.tex
@@ -11,7 +11,7 @@
 %%         Author:  Wolfgang Mehner (WM), wolfgang-mehner@web.de
 %%                  Dr. Fritz Mehner (fgm), mehner.fritz@web.de
 %%      Copyright:  Copyright (c) 2013-2015, Dr. Fritz Mehner
-%%                  Copyright (c) 2016-2017, Wolfgang Mehner
+%%                  Copyright (c) 2016-2018, Wolfgang Mehner
 %%
 %%=====================================================================================
 
@@ -77,7 +77,7 @@
 \vspace{1mm}%
 \textbf{\textsc{\Huge{Hot keys}}}\\
 \vspace{1mm}%
-Key mappings for Vim and gVim\\
+Key mappings for Vim/gVim/Neovim\\
 {\tiny  \texttt{http://www.vim.org}\hspace{1.5mm}---\hspace{1.5mm}\textbf{Wolfgang Mehner},  \texttt{wolfgang-mehner@web.de}}\\
 \vspace{1.0mm}
 {\normalsize (i)} insert mode, {\normalsize (n)} normal mode, {\normalsize (v)} visual mode,\\
@@ -112,7 +112,7 @@ Key mappings for Vim and gVim\\
 \hline     \Map{cfr1} & frame comment, type 1       \hfill (n, i)   \\
 \hline     \Map{cfr2} & frame comment, type 2       \hfill (n, i)   \\
 \hline     \Map{cfr3} & frame comment, type 3       \hfill (n, i)   \\
-\hline     \Map{ch}   & file prolog                 \hfill (n, i)   \\
+\hline     \Map{cp}   & file prolog                 \hfill (n, i)   \\
 \hline     \Map{cm}   & plug-in macros              \hfill (n, i, T)\\
 \hline     \Map{cd}   & date                        \hfill (n, i)   \\
 \hline     \Map{ct}   & date \& time                \hfill (n, i)   \\
@@ -204,16 +204,19 @@ Key mappings for Vim and gVim\\
 \hline
 \hline  \Map{me}  & equation+label            \hfill (n, i, v)\\
 \hline  \Map{mea} & eqnarray+label            \hfill (n, i, v)\\
-\hline  \Map{mm}  & matrix                    \hfill (n, i)\\
 \hline
 \hline  \Map{mca} & cases                     \hfill (n, i, v)\\
 \hline  \Map{mch} & choose                    \hfill (n, i, v)\\
 \hline  \Map{mfr} & frac                      \hfill (n, i, v)\\
-\hline  \Map{mnr} & nth root                  \hfill (n, i, v)\\
+\hline  \Map{mma} & matrix                    \hfill (n, i)\\
+\hline  \Map{mnr} & \textit{n}th root         \hfill (n, i, v)\\
+\hline  \Map{mon} & operatorname              \hfill (n, i, v)\\
+\hline  \Map{mov} & overset                   \hfill (n, i, v)\\
 \hline  \Map{mpr} & prod                      \hfill (n, i, v)\\
+\hline  \Map{msi} & sideset                   \hfill (n, i, v)\\
 \hline  \Map{msq} & sqrt                      \hfill (n, i, v)\\
 \hline  \Map{msu} & sum                       \hfill (n, i, v)\\
-\hline  \Map{mon} & operatorname              \hfill (n, i, v)\\
+\hline  \Map{mun} & underset                  \hfill (n, i, v)\\
 \hline
 %
 \end{tabular}\\
@@ -232,11 +235,12 @@ Key mappings for Vim and gVim\\
 \hline
 \multicolumn{2}{|r|}{\textsl{B\textbf{e}amer}}\\[1.0ex]
 \hline \Map{bf}  & frame           \hfill (n, i, v)\\
-\hline \Map{bc}  & columns         \hfill (n, i, v, T)\\
-\hline \Map{bi}  & itemize         \hfill (n, i, v)\\
-\hline \Map{bo}  & overprint       \hfill (n, i, b)\\
-\hline \Map{bg}  & includegraphics \hfill (n, i)\\
+\hline \Map{bco} & columns         \hfill (n, i, v, T)\\
+\hline \Map{bit} & itemize         \hfill (n, i, v)\\
+\hline \Map{bov} & overprint       \hfill (n, i, v)\\
+\hline \Map{bgr} & includegraphics \hfill (n, i)\\
 \hline \Map{bbl} & block           \hfill (n, i, v)\\
+\hline \Map{btc} & textcolor       \hfill (n, i, v)\\
 \hline
 %%----------------------------------------------------------------------
 %%  Wizard
@@ -270,8 +274,8 @@ Key mappings for Vim and gVim\\
 \hline
 \multicolumn{2}{|r|}{\textsl{S\textbf{n}ippets}}                \\[1.0ex]
 \hline \Map{nr}  & read code snippet         \hfill (n, i)   \\
-\hline \Map{nv}  & view code snippet         \hfill (n, i)   \\
 \hline \Map{nw}  & write code snippet        \hfill (n, i, v)\\
+\hline \Map{nv}  & view code snippet         \hfill (n, i)   \\
 \hline \Map{ne}  & edit code snippet         \hfill (n, i)   \\
 \hline
 \hline \Map{ntl} & edit local templates      \hfill (n, i)   \\
@@ -297,6 +301,7 @@ Key mappings for Vim and gVim\\
 \multicolumn{2}{|r|}{\textsl{\textbf{R}un}} \\[1.0ex]
 \hline \Map{rr}   & save + run typesetter                    \hfill (n, i)\\
 \hline \Map{rla}  & save + run \texttt{lacheck}              \hfill (n, i)\\
+\hline \Map{rmd}  & set the main document                    \hfill (n, i)\\
 \hline \Map{re}   & errors from last bg.\ process            \hfill (n, i)\\
 \hline \Map{rdvi} & view DVI                                 \hfill (n, i)\\
 \hline \Map{rpdf} & view PDF                                 \hfill (n, i)\\
@@ -311,17 +316,7 @@ Key mappings for Vim and gVim\\
 \hline \Map{rp}   & method for external processing           \hfill (n, i, T)\\
 \hline
 \hline \Map{rh}   & hardcopy buffer to postscript            \hfill (n, i, v)\\
-\hline \Map{rse}  & show plug-in settings                    \hfill (n, i)\\
-\hline
-%%----------------------------------------------------------------------
-%%  tool box
-%%----------------------------------------------------------------------
-\hline
-\multicolumn{2}{|r|}{\textsl{Tool Box}} \\[1.0ex]
-\hline \Map{rm}  & run \texttt{make}                        \hfill (n, i)   \\
-\hline \Map{rcm} & choose makefile                          \hfill (n, i)   \\
-\hline \Map{rmc} & \texttt{make clean}                      \hfill (n, i)   \\
-\hline \Map{rma} & command line arguments for \texttt{make} \hfill (n, i)   \\
+\hline \Map{rs}   & show plug-in settings                    \hfill (n, i)\\
 \hline
 \end{tabular}\\[2.5ex]
 %%~~~~~ TABULAR :  end  ~~~~~~~~~~
@@ -339,8 +334,10 @@ Run tools like \texttt{makeindex} or \texttt{bibtex} : \\[1.0ex]
 \texttt{:LatexMakeglossaries [<base>]} \\[1.0ex]
 \texttt{:LatexMakeindex [<idx-file>]} \\[1.0ex]
 \texttt{:LatexBibtex [<aux-file>]} \\[1.0ex]
-(the default arguments are derived from the name of the current buffer) \\[2.5ex]
-Get the errors from the last background process: \\[1.0ex]
+(the default arguments are derived from the name of the current buffer) \\[1.0ex]
+Set the main document: \\[1.0ex]
+\texttt{:LatexMainDoc <tex-file>} \\[1.0ex]
+View the errors of the last background process: \\[1.0ex]
 \texttt{:LatexErrors} \\[2.5ex]
 }
 %
@@ -351,15 +348,17 @@ Get the errors from the last background process: \\[1.0ex]
 \parbox[t][130mm][t]{70mm}{%
 %
 %%----------------------------------------------------------------------
-%%  View
+%%  View & Convert
 %%----------------------------------------------------------------------
-\large{\textbf{View}}\\[1.0ex]
+\large{\textbf{View \& Convert}}\\[1.0ex]
 View a document of the specified format
 (supports \texttt{dvi}, \texttt{pdf}, and \texttt{ps}): \\[1.0ex]
 \texttt{:LatexView [<format>]} \\[1.0ex]
 \texttt{:LatexView [<format>] <file>} \\[1.0ex]
 \texttt{:LatexView <file> [<format>]} \\[1.0ex]
-(the default filename is derived from the name of the current buffer.) \\[2.5ex]
+Convert a document: \\[1.0ex]
+\texttt{:LatexConvert [<file>]} \\[1.0ex]
+(the default filename is derived from the name of the current buffer) \\[2.5ex]
 %
 %%----------------------------------------------------------------------
 %%  Options
